--- a/blog/templates/blog/single_blog.html
+++ b/blog/templates/blog/single_blog.html
@@ -12,7 +12,7 @@
     <hr>
     <h3>Comments</h3>
     <h4>Add a comment</h4>
-    <form method="POST">
+    <form method="POST" action="#">
         {%csrf_token%}
         {{form.label}}
         {{form}}
